--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                       Currently I'm a CS undergrad at Model Engineering College,Kochi. My interests are web-development,competitive coding,Cyber Security and much more.
                     </p>
                     <p class="lead">
-                      My aim is to become a software engineer in one of the leading companies like Microsoft, Google,Amazon,Goldman Sacchs etc. But being a student I'm looking forward for intership oppurtunities in these companies.
+                      My aim is to become a software engineer in a multi national company. But being a student I'm looking forward for intership oppurtunities in one of the same.
                     </p>
                     <p class="lead">
                       If you guys want to get in touch with me then please feel free to contact me, so that either I can help or you can help me.
